--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,5 +25,7 @@ spring:
 #    password: guest
 
 xiaokui:
+  session-alive: 60 * 60 * 24
+  session-check: 60 * 30
   most-view: 8
   recent-upload: 8
