--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,8 +26,19 @@ spring:
 #    password: guest
 
 xiaokui:
+  # 最对访问数量
+  most-view: 8
+  # 最近上传数量
+  recent-upload: 8
+  # 推荐数量
+  recommend-count: 16
+  # 单个IP单日对单篇博客最大贡献访问量
+  single-ip-contribute-blog: 10
+  # 单个IP单日对所有博客最大贡献访问量
+  single-ip-contribute--all-blog: 40
+  # 单个用户单日对单篇博客最大贡献访问量
+  single-user-contribute-blog: 20
+  # 单个用户单日对所有博客最大贡献访问量，两个限制条件不冲突
+  single-user-contribute--all-blog: 80
   session-alive: 60 * 60 * 24
   session-check: 60 * 60 * 6
-  most-view: 8
-  recent-upload: 8
-  recommend-count: 16
