--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -34,6 +34,7 @@ spring:
     url: jdbc:mysql://localhost:3306/newxiaokui?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=true
     username: root
     password: 199710
+    driver-class-name: com.mysql.cj.jdbc.Driver
   redis:
     host: localhost
     port: 6379
@@ -46,6 +47,6 @@ spring:
 logging:
   level.root: info
   level.site.xiaokui: info
+  level.org.springframework.web: debug
   # 这个sb东西去不掉
   file: local.log
-#  level.org.springframework.web: debug
