--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,9 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-mail')
     compile('org.springframework.boot:spring-boot-starter-web')
 
+    compile 'io.github.biezhi:wechat-api:1.0.6'
+    compile 'io.jsonwebtoken:jjwt:0.9.1'
+
 //    compile('org.springframework.boot:spring-boot-devtools')
 //    compile('org.springframework.boot:spring-boot-starter-actuator')
 //    compile('org.springframework.boot:spring-boot-starter-quartz')
@@ -43,7 +46,8 @@ dependencies {
 //    compile('org.springframework.shell:spring-shell-starter:2.0.0.RELEASE')
 
     compile 'org.apache.shiro:shiro-spring-boot-starter:1.4.0'
-    compile 'cn.hutool:hutool-all:4.0.12'
+
+    compile 'cn.hutool:hutool-all:5.3.1'
     compile 'com.github.penggle:kaptcha:2.3.2'
     // 1.1.54,55有bug，单单换成52，项目编译没问题
     compile 'com.ibeetl:beetl-framework-starter:1.1.63.RELEASE'
@@ -72,6 +76,9 @@ dependencies {
     compile 'com.vladsch.flexmark:flexmark:0.60.2'
     compile 'com.vladsch.flexmark:flexmark-ext-tables:0.60.2'
 //    compile 'com.vladsch.flexmark:flexmark-all:0.50.40'
+
+    compile 'com.github.binarywang:weixin-java-pay:3.7.0'
+    compile 'com.github.binarywang:weixin-java-mp:3.7.0'
 
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
