--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ apply plugin: 'war'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'application'
+mainClassName = 'site.xiaokui.NewXiaokuiApplication'
 
 group = 'site.xiaokui'
 version = '0.0.1-SNAPSHOT'
@@ -30,6 +32,8 @@ repositories {
 }
 
 dependencies {
+    compile project(':k-main')
+
     compile('org.springframework.boot:spring-boot-starter-amqp')
     compile('org.springframework.boot:spring-boot-starter-cache')
     compile('org.springframework.boot:spring-boot-starter-aop')
@@ -81,7 +85,6 @@ dependencies {
 
     compile 'com.github.binarywang:weixin-java-pay:3.7.0'
     compile 'com.github.binarywang:weixin-java-mp:3.7.0'
-
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
