--- a/k-base/build.gradle
+++ b/k-base/build.gradle
@@ -1,34 +1,22 @@
-buildscript {
-    ext {
-//         springBootVersion = '2.0.2.RELEASE'
-        // 换最新的试下
-        springBootVersion = '2.2.6.RELEASE'
-    }
-    repositories {
-        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-    }
-}
-
 apply plugin: 'java'
-apply plugin: 'war'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
-group 'site.xiaokui'
-version '0.0.1-SNAPSHOT'
 
-sourceCompatibility = 1.8
+jar{
+    enabled = true
+}
+
+bootJar {
+    enabled = false
+}
 
 repositories {
+    maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
     mavenCentral()
 }
 
 dependencies {
-
     compile('org.springframework.boot:spring-boot-starter-amqp')
     compile('org.springframework.boot:spring-boot-starter-cache')
     compile('org.springframework.boot:spring-boot-starter-aop')
@@ -39,24 +27,16 @@ dependencies {
     compile 'io.github.biezhi:wechat-api:1.0.6'
     compile 'io.jsonwebtoken:jjwt:0.9.1'
 
-//    compile('org.springframework.boot:spring-boot-devtools')
-//    compile('org.springframework.boot:spring-boot-starter-actuator')
-//    compile('org.springframework.boot:spring-boot-starter-quartz')
-//    compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2')
-//    compile('com.alibaba:druid-spring-boot-starter:1.1.9')
-//    compile('org.springframework.shell:spring-shell-starter:2.0.0.RELEASE')
-
     compile 'org.apache.shiro:shiro-spring-boot-starter:1.4.0'
 
     compile 'cn.hutool:hutool-all:5.3.1'
     compile 'com.github.penggle:kaptcha:2.3.2'
+
     // 1.1.54,55有bug，单单换成52，项目编译没问题
     compile 'com.ibeetl:beetl-framework-starter:1.1.63.RELEASE'
 
-//    compile 'org.ehcache:ehcache:3.5.2'错误依赖，留作提醒
     compile 'org.apache.shiro:shiro-ehcache:1.4.0'
     compile 'net.sf.ehcache:ehcache:2.10.5'
-//    compile 'net.sf.ehcache.internal:ehcache:2.10.5'
 
     compile 'redis.clients:jedis:2.9.0'
     compile 'io.protostuff:protostuff-runtime:1.6.0'
@@ -68,15 +48,10 @@ dependencies {
     compile 'com.alibaba:fastjson:1.2.56'
     compile 'javax.mail:mail:1.4.7'
 
-//    compile 'io.springfox:springfox-swagger2:2.9.0'
-//    compile 'io.springfox:springfox-swagger-ui:2.9.0'
-
-//    runtime('mysql:mysql-connector-java')
     compile 'mysql:mysql-connector-java:8.0.9-rc'
 
     compile 'com.vladsch.flexmark:flexmark:0.60.2'
     compile 'com.vladsch.flexmark:flexmark-ext-tables:0.60.2'
-//    compile 'com.vladsch.flexmark:flexmark-all:0.50.40'
 
     compile 'com.github.binarywang:weixin-java-pay:3.7.0'
     compile 'com.github.binarywang:weixin-java-mp:3.7.0'
