--- a/k-main/build.gradle
+++ b/k-main/build.gradle
@@ -1,30 +1,18 @@
-buildscript {
-    ext {
-//         springBootVersion = '2.0.2.RELEASE'
-        // 换最新的试下
-        springBootVersion = '2.2.6.RELEASE'
-    }
-    repositories {
-        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-    }
-}
-
 apply plugin: 'java'
-apply plugin: 'war'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
-group 'site.xiaokui'
-version '0.0.1-SNAPSHOT'
+jar{
+    enabled = true
+}
 
-sourceCompatibility = 1.8
+bootJar {
+    enabled = true
+}
 
 repositories {
+    maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
     mavenCentral()
 }
 
@@ -43,17 +31,11 @@ dependencies {
     compile 'io.github.biezhi:wechat-api:1.0.6'
     compile 'io.jsonwebtoken:jjwt:0.9.1'
 
-//    compile('org.springframework.boot:spring-boot-devtools')
-//    compile('org.springframework.boot:spring-boot-starter-actuator')
-//    compile('org.springframework.boot:spring-boot-starter-quartz')
-//    compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2')
-//    compile('com.alibaba:druid-spring-boot-starter:1.1.9')
-//    compile('org.springframework.shell:spring-shell-starter:2.0.0.RELEASE')
-
     compile 'org.apache.shiro:shiro-spring-boot-starter:1.4.0'
 
     compile 'cn.hutool:hutool-all:5.3.1'
     compile 'com.github.penggle:kaptcha:2.3.2'
+
     // 1.1.54,55有bug，单单换成52，项目编译没问题
     compile 'com.ibeetl:beetl-framework-starter:1.1.63.RELEASE'
 
