--- a/k-main/build.gradle
+++ b/k-main/build.gradle
@@ -21,6 +21,10 @@ dependencies {
     compile project(':k-blog')
     compile project(':k-wx')
 
+    compile 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.2'
+
+    compile 'org.apache.curator:curator-recipes:4.2.0'
+
     compile('org.springframework.boot:spring-boot-starter-amqp')
     compile('org.springframework.boot:spring-boot-starter-cache')
     compile('org.springframework.boot:spring-boot-starter-aop')
@@ -37,7 +41,8 @@ dependencies {
     compile 'com.github.penggle:kaptcha:2.3.2'
 
     // 1.1.54,55有bug，单单换成52，项目编译没问题
-    compile 'com.ibeetl:beetl-framework-starter:1.1.63.RELEASE'
+//    compile 'com.ibeetl:beetl-framework-starter:1.1.63.RELEASE'
+    compile 'com.ibeetl:beetl-framework-starter:1.2.28.RELEASE'
 
 //    compile 'org.ehcache:ehcache:3.5.2'错误依赖，留作提醒
     compile 'org.apache.shiro:shiro-ehcache:1.4.0'
