--- a/k-main/src/main/resources/application.yml
+++ b/k-main/src/main/resources/application.yml
@@ -7,11 +7,21 @@ spring:
   profiles:
     #需要激活的profile local或remote
     active: remote
+  application:
+    name: main-cosumer
+  dubbo:
+    server: true
+    registry:
+      address: zookeeper://localhost:2181
   mvc:
     view:
       prefix: /
     pathmatch:
       use-suffix-pattern: true #忽略小数点后缀，如/test.tss仍然是匹配/test
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
+
   http:
     encoding:
       charset: UTF-8
@@ -38,10 +48,10 @@ wx:
         aesKey: nIIVMI0VRsVD6DhSQ9H5G88TswVg1reXO0maaLuP0Yc
 
 xiaokui:
-  # 最对访问数量
-  most-view: 8
+  # 最多访问数量
+  most-view: 16
   # 最近上传数量
-  recent-upload: 8
+  recent-upload: 0
   # 推荐数量
   recommend-count: 16
   # 单个IP单日对单篇博客最大贡献访问量
@@ -52,5 +62,8 @@ xiaokui:
   single-user-contribute-blog: 20
   # 单个用户单日对所有博客最大贡献访问量，两个限制条件不冲突
   single-user-contribute--all-blog: 40
+  # 是否启用shiro，关闭后系统所有权限控制将会失效
+  enable-shiro: false
   session-alive: 60 * 60 * 24
   session-check: 60 * 60 * 6
+
