--- a/k-wx/build.gradle
+++ b/k-wx/build.gradle
@@ -1,16 +1,26 @@
-plugins {
-    id 'java'
+apply plugin: 'java'
+apply plugin: 'idea'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
+
+jar{
+    enabled = true
 }
 
-group 'site.xiaokui'
-version '0.0.1-SNAPSHOT'
-
-sourceCompatibility = 1.8
+bootJar {
+    enabled = true
+}
 
 repositories {
+    maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
     mavenCentral()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile project(':k-base')
+
+    compile 'io.github.biezhi:wechat-api:1.0.6'
+    compile 'io.jsonwebtoken:jjwt:0.9.1'
+
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
