修改部分页面

--- a/k-blog/build.gradle
+++ b/k-blog/build.gradle
@@ -42,7 +42,8 @@ dependencies {
     compile 'cn.hutool:hutool-all:5.3.1'
     compile 'com.github.penggle:kaptcha:2.3.2'
     // 1.1.54,55有bug，单单换成52，项目编译没问题
-    compile 'com.ibeetl:beetl-framework-starter:1.1.63.RELEASE'
+//    compile 'com.ibeetl:beetl-framework-starter:1.1.63.RELEASE'
+    compile 'com.ibeetl:beetl-framework-starter:1.2.28.RELEASE'
 
 //    compile 'org.ehcache:ehcache:3.5.2'错误依赖，留作提醒
     compile 'org.apache.shiro:shiro-ehcache:1.4.0'
