--- a/k-base/build.gradle
+++ b/k-base/build.gradle
@@ -54,5 +54,7 @@ dependencies {
     compile 'com.github.binarywang:weixin-java-pay:3.7.0'
     compile 'com.github.binarywang:weixin-java-mp:3.7.0'
 
+    compile  'org.openjdk.jmh:jmh-core:1.0'
+    compileOnly 'org.openjdk.jmh:jmh-generator-annprocess:1.0'
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
