修改部分页面

--- a/k-main/src/main/resources/application.yml
+++ b/k-main/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 9999
+  port: 9090
   servlet:
     context-path: /
 
@@ -49,9 +49,11 @@ wx:
 
 xiaokui:
   # 最多访问数量
-  most-view: 16
+  most-view: 8
   # 最近上传数量
   recent-upload: 0
+  # 最近上传数量
+  recent-update: 8
   # 推荐数量
   recommend-count: 16
   # 单个IP单日对单篇博客最大贡献访问量
@@ -63,7 +65,7 @@ xiaokui:
   # 单个用户单日对所有博客最大贡献访问量，两个限制条件不冲突
   single-user-contribute--all-blog: 40
   # 是否启用shiro，关闭后系统所有权限控制将会失效
-  enable-shiro: false
+  enable-shiro: true
   session-alive: 60 * 60 * 24
   session-check: 60 * 60 * 6
 
