--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,5 @@
 buildscript {
     ext {
-//         springBootVersion = '2.0.2.RELEASE'
-        // 换最新的试下
         springBootVersion = '2.2.6.RELEASE'
     }
     repositories {
@@ -13,17 +11,8 @@ buildscript {
     }
 }
 
-apply plugin: 'java'
-apply plugin: 'war'
-apply plugin: 'idea'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-apply plugin: 'application'
-mainClassName = 'site.xiaokui.NewXiaokuiApplication'
-
 group = 'site.xiaokui'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 1.8
 
 repositories {
     maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
@@ -31,6 +20,18 @@ repositories {
     maven { url "https://repo.spring.io/milestone" }
 }
 
-dependencies {
-    compile project(':k-main')
+subprojects {
+    apply plugin: 'java'
+    apply plugin: 'war'
+    apply plugin: 'idea'
+    apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
+    repositories {
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        mavenCentral()
+    }
+    ext {
+        springBootVersion = '2.2.6.RELEASE'
+    }
 }
+
