--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,13 @@ include 'k-base'
 //include 'k-wx'
 include 'k-blog'
 include 'k-main'
+include 'oauth-center'
+include 'oauth-center:user-center'
+include 'oauth-center:auth-center'
+include 'k-common'
+include 'k-common:k-mysql-starter'
+findProject(':k-common:k-mysql-starter')?.name = 'k-mysql-starter'
+include 'k-common:k-swagger-starter'
+findProject(':k-common:k-swagger-starter')?.name = 'k-swagger-starter'
+include 'register-center'
 
