--- a/settings.gradle
+++ b/settings.gradle
@@ -8,8 +8,7 @@ include 'oauth-center:user-center'
 include 'oauth-center:auth-center'
 include 'k-common'
 include 'k-common:k-mysql-starter'
-findProject(':k-common:k-mysql-starter')?.name = 'k-mysql-starter'
 include 'k-common:k-swagger-starter'
-findProject(':k-common:k-swagger-starter')?.name = 'k-swagger-starter'
 include 'register-center'
+include 'register-center:eureka-server'
 
