--- a/k-blog/src/main/resources/application-local.yml
+++ b/k-blog/src/main/resources/application-local.yml
@@ -13,7 +13,7 @@ beetlsql:
 xiaokui:
   basePath: /xiaokui/
   # 静态库资源路径
-  staticLibsPath: ${xiaokui.basePath}/lib/
+  staticLibPath: ${xiaokui.basePath}/lib/
   # 博客上传路径
   blogUploadPath: ${xiaokui.basePath}/upload/
   # 音乐保存目录
