--- a/oauth-center/user-center/build.gradle
+++ b/oauth-center/user-center/build.gradle
@@ -1,6 +1,12 @@
 dependencies {
-    compile project(':k-base')
+    compile project(':k-common:k-base-service')
+
     compile project(':k-common:k-swagger-starter')
+
+    compile 'org.apache.shiro:shiro-spring-boot-starter:1.5.2'
+    compile 'org.apache.shiro:shiro-ehcache:1.5.0'
+
+
 
     compile('org.springframework.boot:spring-boot-starter-cache')
     compile('org.springframework.boot:spring-boot-starter-aop')
