--- a/oauth-center/user-center/src/main/resources/application.yml
+++ b/oauth-center/user-center/src/main/resources/application.yml
@@ -1,12 +1,18 @@
 server:
-  port: 9090
+  port: 9000
   servlet:
     context-path: /
 
 spring:
   profiles:
     #需要激活的profile local或remote
-    active: remote
+    active: local
+  application:
+    name: main-cosumer
+  dubbo:
+    server: true
+    registry:
+      address: zookeeper://localhost:2181
   mvc:
     view:
       prefix: /
@@ -29,37 +35,5 @@ spring:
 #    username: guest
 #    password: guest
 
-wx:
-  mp:
-    configs:
-      - appId: wxda9a290c4b3e91fd
-        secret: 7f299f10bac94a0c7b2020e11327cf76
-        token: wxda9a290c4b3e91fd
-        aesKey: nIIVMI0VRsVD6DhSQ9H5G88TswVg1reXO0maaLuP0Yc
-      - appId: wxcf34437c569d6496
-        secret: eb9c4cbafbb9a5ea4ca1ded733e6c1d4
-        token: hk467914950
-        aesKey: nIIVMI0VRsVD6DhSQ9H5G88TswVg1reXO0maaLuP0Yc
-
-xiaokui:
-  # 最多访问数量
-  most-view: 8
-  # 最近上传数量
-  recent-upload: 0
-  # 最近上传数量
-  recent-update: 8
-  # 推荐数量
-  recommend-count: 16
-  # 单个IP单日对单篇博客最大贡献访问量
-  single-ip-contribute-blog: 5
-  # 单个IP单日对所有博客最大贡献访问量
-  single-ip-contribute--all-blog: 20
-  # 单个用户单日对单篇博客最大贡献访问量
-  single-user-contribute-blog: 20
-  # 单个用户单日对所有博客最大贡献访问量，两个限制条件不冲突
-  single-user-contribute--all-blog: 40
-  # 是否启用shiro，关闭后系统所有权限控制将会失效
-  enable-shiro: true
-  session-alive: 60 * 60 * 24
-  session-check: 60 * 60 * 6
-
+oauth2:
+  loginUrl: https://www.xiaokui.site/aabb
