--- a/settings.gradle
+++ b/settings.gradle
@@ -12,4 +12,5 @@ include 'k-common:k-swagger-starter'
 include 'register-center'
 include 'register-center:eureka-server'
 include 'k-common:k-base-service'
+include 'api-geteway'
 
