--- a/k-blog/build.gradle
+++ b/k-blog/build.gradle
@@ -20,25 +20,20 @@ dependencies {
 
     compile project(':k-common:k-base-service')
 
-//    compile('org.springframework.boot:spring-boot-devtools')
-//    compile('org.springframework.boot:spring-boot-starter-actuator')
-//    compile('org.springframework.boot:spring-boot-starter-quartz')
-//    compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2')
-//    compile('com.alibaba:druid-spring-boot-starter:1.1.9')
-//    compile('org.springframework.shell:spring-shell-starter:2.0.0.RELEASE')
+    compile('org.springframework.boot:spring-boot-starter-actuator')
+
+    compile 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    compile 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
     compile 'org.apache.shiro:shiro-spring-boot-starter:1.4.0'
 
     compile 'cn.hutool:hutool-all:5.3.1'
     compile 'com.github.penggle:kaptcha:2.3.2'
-    // 1.1.54,55有bug，单单换成52，项目编译没问题
-//    compile 'com.ibeetl:beetl-framework-starter:1.1.63.RELEASE'
+
     compile 'com.ibeetl:beetl-framework-starter:1.2.28.RELEASE'
 
-//    compile 'org.ehcache:ehcache:3.5.2'错误依赖，留作提醒
     compile 'org.apache.shiro:shiro-ehcache:1.4.0'
     compile 'net.sf.ehcache:ehcache:2.10.5'
-//    compile 'net.sf.ehcache.internal:ehcache:2.10.5'
 
     compile 'io.protostuff:protostuff-runtime:1.6.0'
     compile 'io.protostuff:protostuff-core:1.6.0'
