--- a/k-wx/src/main/resources/application.yml
+++ b/k-wx/src/main/resources/application.yml
@@ -2,14 +2,11 @@ server:
   port: 9090
   servlet:
     context-path: /
-    encoding:
-      charset: UTF-8
-      force: true
 
 spring:
   profiles:
     #需要激活的profile local或remote
-    active: local
+    active: remote
   mvc:
     view:
       prefix: /
@@ -18,8 +15,31 @@ spring:
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
+
+  http:
+    encoding:
+      charset: UTF-8
+      force: true
   aop:
     proxy-target-class: true #false为启用jdk默认动态代理(面向接口),true为cglib动态代理(面向继承)
+
+#  rabbitmq:
+#    host: 127.0.0.1
+#    port: 5672
+#    username: guest
+#    password: guest
+
+wx:
+  mp:
+    configs:
+      - appId: wxda9a290c4b3e91fd
+        secret: 7f299f10bac94a0c7b2020e11327cf76
+        token: wxda9a290c4b3e91fd
+        aesKey: nIIVMI0VRsVD6DhSQ9H5G88TswVg1reXO0maaLuP0Yc
+      - appId: wxcf34437c569d6496
+        secret: eb9c4cbafbb9a5ea4ca1ded733e6c1d4
+        token: hk467914950
+        aesKey: nIIVMI0VRsVD6DhSQ9H5G88TswVg1reXO0maaLuP0Yc
 
 xiaokui:
   # 最多访问数量
