--- a/oauth-center/auth-center/build.gradle
+++ b/oauth-center/auth-center/build.gradle
@@ -11,5 +11,8 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-starter-cache')
 
+    compile 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    compile 'org.springframework.cloud:spring-cloud-starter-openfeign'
+
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
