--- a/api-gateway/src/main/resources/bootstrap.yml
+++ b/api-gateway/src/main/resources/bootstrap.yml
@@ -8,7 +8,7 @@ spring:
 management:
   endpoints:
     web:
-      base-path: actuator
+      base-path: /actuator
       exposure:
         include: "*"
   endpoint:
