--- a/settings.gradle
+++ b/settings.gradle
@@ -13,4 +13,21 @@ include 'register-center'
 include 'register-center:eureka-server'
 include 'k-common:k-base-service'
 include 'api-gateway'
+include 'k-mall'
+include 'k-mall:user-service'
+findProject(':k-mall:user-service')?.name = 'user-service'
+include 'k-mall:product-service'
+findProject(':k-mall:product-service')?.name = 'product-service'
+include 'k-mall:order-service'
+findProject(':k-mall:order-service')?.name = 'order-service'
+include 'k-mall:pay-service'
+findProject(':k-mall:pay-service')?.name = 'pay-service'
+include 'k-mall:api-gateway'
+findProject(':k-mall:api-gateway')?.name = 'api-gateway'
+include 'k-mall:eureka-server'
+findProject(':k-mall:eureka-server')?.name = 'eureka-server'
+include 'k-mall:web-h5'
+findProject(':k-mall:web-h5')?.name = 'web-h5'
+include 'k-mall:common-api'
+findProject(':k-mall:common-api')?.name = 'common-api'
 
