--- a/k-mall/product-service/src/test/resources/application.yml
+++ b/k-mall/product-service/src/test/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8991
+  port: ${random.int[1000,1999]}
 
 spring:
   application:
@@ -17,9 +17,7 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:9000/eureka/
   instance:
-      instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${server.port}}
-
-
+    instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${server.port}}
 
 
 
