--- a/k-mall/user-service/src/main/resources/application.yml
+++ b/k-mall/user-service/src/main/resources/application.yml
@@ -4,6 +4,13 @@ server:
 spring:
   application:
     name: user-service
+  datasource:
+    type: com.zaxxer.hikari.HikariDataSource
+    # 注意这里的GMT+8，用于解决数据库时差8问题
+    url: jdbc:mysql://localhost:3306/k-mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=true
+    username: root
+    password: 199710
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
 eureka:
   client:
