--- a/k-mall/order-service/src/main/resources/application-master1.yml
+++ b/k-mall/order-service/src/main/resources/application-master1.yml
@@ -11,6 +11,9 @@ spring:
     username: root
     password: 199710
     driver-class-name: com.mysql.cj.jdbc.Driver
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
 
 eureka:
   client:
