--- a/k-mall/order-service/src/main/resources/application-master1.yml
+++ b/k-mall/order-service/src/main/resources/application-master1.yml
@@ -22,6 +22,10 @@ eureka:
   instance:
       instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${server.port}}
 
+snowflake:
+  workerId: 10
+  dataCenterId: 10
+
 
 
 
