完善网关-日志模块

--- a/k-mall/api-gateway/src/main/resources/application.yml
+++ b/k-mall/api-gateway/src/main/resources/application.yml
@@ -49,6 +49,7 @@ hystrix:
       execution:
         isolation:
           thread:
+            # 默认熔断时间
             timeoutInMilliseconds: 1000
 
 
