--- a/k-mall/api-gateway/build.gradle
+++ b/k-mall/api-gateway/build.gradle
@@ -1,6 +1,8 @@
 dependencies {
     compile 'cn.hutool:hutool-all:5.3.1'
 
+    compile('org.springframework.boot:spring-boot-starter-actuator')
+
     compile 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     compile 'com.auth0:java-jwt:3.10.0'
 
