--- a/k-mall/api-gateway/src/main/resources/application.yml
+++ b/k-mall/api-gateway/src/main/resources/application.yml
@@ -19,8 +19,8 @@ spring:
             fallbackUri: 'forward:/defaultfallback'
         - name: RequestRateLimiter
           args:
-            redis-rate-limiter.replenishRate: 2  # 流速每秒
-            redis-rate-limiter.burstCapacity: 4  # 令牌桶的容积
+            redis-rate-limiter.replenishRate: 1  # 流速每秒
+            redis-rate-limiter.burstCapacity: 2  # 令牌桶的容积
             key-resolver: "#{@ipAddressKeyResolver}" #SPEL表达式去的对应的bean
   redis:
     # redis机器最好与网关在同一台机器上，便于最大化限流效果
@@ -52,7 +52,19 @@ hystrix:
             # 默认熔断时间
             timeoutInMilliseconds: 1000
 
+management:
+  endpoints:
+    web:
+      base-path: /actuator
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
 
+logging:
+  level:
+    org.springframework.cloud.gateway: debug
 
 
 
