--- a/k-blog/build.gradle
+++ b/k-blog/build.gradle
@@ -1,24 +1,6 @@
-plugins {
-    id 'org.springframework.boot'
-    id 'java'
-}
-
-apply plugin: 'org.springframework.boot'
-
-//apply plugin: 'java'
-//apply plugin: 'idea'
-//
-//bootJar {
-//    enabled = true
-//}
-
-repositories {
-    maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
-    mavenCentral()
-}
-
 dependencies {
-//    compile project(':k-common:k-base-service')
+    compile project(':k-common:k-base-service')
+
     compile('org.springframework.boot:spring-boot-starter-actuator')
     compile 'org.apache.shiro:shiro-spring-boot-starter:1.4.0'
 
@@ -31,7 +13,8 @@ dependencies {
     compile 'io.protostuff:protostuff-runtime:1.6.0'
     compile 'io.protostuff:protostuff-core:1.6.0'
 
-    compile 'org.projectlombok:lombok'
+    compileOnly 'org.projectlombok:lombok'
+
     compile 'org.jsoup:jsoup:1.11.3'
 
     compile 'com.vladsch.flexmark:flexmark:0.60.2'
