--- a/k-common/k-base-service/build.gradle
+++ b/k-common/k-base-service/build.gradle
@@ -3,6 +3,8 @@ dependencies {
     compile 'cn.hutool:hutool-all:5.3.1'
     // 邮箱支持
     compile 'javax.mail:mail:1.4.7'
+    // 配置文件密码加密
+    compile 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.3'
 
     // Spring Web支持
     compile 'org.springframework.boot:spring-boot-starter-web'
