--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ subprojects {
         }
     }
 
-    // 这里一定得要。在多模块下，不然编译失败，因为不会依赖模块给打包。
+    // 这里一定得要，在多模块下，不然编译失败，因为不会依赖模块给打包。
     jar {
         enabled = true
     }
