--- a/settings.gradle
+++ b/settings.gradle
@@ -7,19 +7,24 @@ include 'k-study:k-offer'
 
 // 老博客模块，纯原创，开始于2017年，前后端未完全分离
 // 技术架构整体没问题，业务模块也没啥大问题，思而再三，还是决定不用了，改造适配vue工作量过大
+// 不管是前端适配后端，还是后端适配前端，工作量都挺大，而且难度也是有的，耗时耗力
+// 故而选用一个前端后端基本都整合好的，后期只需要看懂，并略微修改即可使用
 include 'k-blog:k-blog-user'
 include 'k-blog:k-blog-core'
 include 'k-blog:k-blog-app'
 
+// 新博客模块，2020年重写，主要是优化用户体验
 // 为了界面的美化，采用前后端完全分离开发（主要是管理端，vue的界面和操作体验真是没话说）
-// 又由于后台管理的基础模板较多，这里就不在多做重复的罗轮子了
-// 基础模板借鉴自 https://github.com/elunez/eladmin，约有70%左右的代码重复量
-// 新博客模块，主要是优化用户体验
+// 又由于后台管理的基础模板较多，这里就不再多做重复的轮子了
+// 不是造不出轮子，而是没必要，请知悉（项目源代码一路看下来没压力，且之前已经造了一个差不多了的）
+// 基础模板借鉴自 https://github.com/elunez/eladmin，约有80%左右的代码重复量
+// 自己补充了大量注释，包含但不限于流程理解、内部逻辑、代码优化、大体实现，以便于自己深入理解，可自行比较本项目代码与原作者代码
+// 技术架构变化有 安全认证框架shiro -> spring security，数据库操作框架beetlsql -> jpa，
 include 'k-new-blog:eladmin-common'
 include 'k-new-blog:eladmin-system'
 include 'k-new-blog:eladmin-logging'
 include 'k-new-blog:eladmin-tool'
-include 'k-new-blog:eladmin-blog'
+include 'k-new-blog:eladmin-generator'
 
 // 基础公共模块模块
 include 'k-common:k-base-service'
