--- a/k-new-blog/eladmin-system/src/main/resources/config/application-dev.yml
+++ b/k-new-blog/eladmin-system/src/main/resources/config/application-dev.yml
@@ -1,7 +1,15 @@
-debug: true
+debug: false
 
 #配置数据源
 spring:
+  redis:
+    #数据库索引
+    database: ${REDIS_DB:0}
+    host: ${REDIS_HOST:127.0.0.1}
+    port: ${REDIS_PORT:6379}
+    password: ${REDIS_PWD:}
+    #连接超时时间
+    timeout: 5000
   datasource:
     druid:
       db-type: com.alibaba.druid.pool.DruidDataSource
