--- a/k-new-blog/eladmin-system/src/main/resources/config/application.yml
+++ b/k-new-blog/eladmin-system/src/main/resources/config/application.yml
@@ -3,14 +3,9 @@ server:
 
 spring:
   profiles:
-    active: dev
+    active: prod
   freemarker:
     check-template-location: false
-#  jackson:
-#    serialization:
-#      write-dates-as-timestamps: false
-#    date-format: yyyy-MM-dd HH:mm:ss
-#    time-zone: GMT+8
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
@@ -28,15 +23,6 @@ spring:
         ddl-auto: none
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
     open-in-view: true
-
-  redis:
-    #数据库索引
-    database: ${REDIS_DB:0}
-    host: ${REDIS_HOST:127.0.0.1}
-    port: ${REDIS_PORT:6379}
-    password: ${REDIS_PWD:}
-    #连接超时时间
-    timeout: 5000
 
 xiaokui:
   # 最多访问数量
