优化前端模块化路由，以及jenkins自动打包

--- a/k-new-blog/eladmin-system/src/main/resources/config/application-prod.yml
+++ b/k-new-blog/eladmin-system/src/main/resources/config/application-prod.yml
@@ -6,7 +6,7 @@ spring:
     host: ${REDIS_HOST:120.79.20.49}
     port: ${REDIS_PORT:6379}
     password: ${REDIS_PWD:1238127943Hk~}
-    #连接超时时间
+    #连接超时时cd
     timeout: 5000
   datasource:
     druid:
