补充flink相关代码

--- a/k-new-blog/jenkins/nginx.conf
+++ b/k-new-blog/jenkins/nginx.conf
@@ -82,12 +82,17 @@ http {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Port $server_port;
-        
+
+        location /admin {
+            root /xiaokui/product/dist;
+            index index.html index.htm;
+            try_files $uri $uri/ /admin/index.html;
+            expires -1;
+            gzip_static on;
+        }
+
         location / {
             proxy_pass http://localhost:9090;
-	    # return 404;
-	    # root /xiaokui/root;
-            # index index.html;
         }
     }
 
