--- a/k-new-blog/other/simple.conf
+++ b/k-new-blog/other/simple.conf
@@ -85,6 +85,10 @@ http {
         try_files $uri $uri/ /index/index.html;
         expires -1;
       }
+
+      location / {
+        proxy_pass http://localhost:9090;
+      }
     }
 
     server {
