--- a/k-study/k-mysql/src/main/resources/application-local.yml
+++ b/k-study/k-mysql/src/main/resources/application-local.yml
@@ -1,4 +1,4 @@
-debug: true
+debug: false
 
 spring:
   resources:
@@ -14,3 +14,13 @@ spring:
     host: localhost
     port: 6379
     password:
+
+logging:
+  level.root: info
+  level.db: debug
+  level.org.springframework.web: debug
+  level.redis: debug
+  level.jdbc: trace
+  level.org.apache.ibatis: trace
+  level.org.springframework.transaction: trace
+  level.org.springframework.jdbc: trace
