--- a/k-study/k-mysql/src/main/resources/application.yml
+++ b/k-study/k-mysql/src/main/resources/application.yml
@@ -9,8 +9,8 @@ server:
 spring:
   profiles:
 #    active: 0-base
-    active: 1-read-write
-#    active: 0-base
+#    active: 1-read-write
+    active: 2-sub-db-table
 #    active: 0-base
 #    active: 0-base
 
