--- a/k-study/k-mysql/src/main/resources/application.yml
+++ b/k-study/k-mysql/src/main/resources/application.yml
@@ -10,9 +10,9 @@ spring:
   profiles:
 #    active: 0-base
 #    active: 1-read-write
-    active: 2-sub-db-table
-#    active: 0-base
-#    active: 0-base
+#    active: 2-sub-db-table
+#    active: 3-sub-db-table-read-write
+    active: 4-million-excel
 
   mvc:
     view:
