完善机器人

--- a/k-wx/k-mp-robot/src/main/resources/application-remote.yml
+++ b/k-wx/k-mp-robot/src/main/resources/application-remote.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     # 注意这里的GMT+8，用于解决数据库时差8问题
-    url: jdbc:mysql://localhost:3306/newxiaokui?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=true
+    url: jdbc:mysql://localhost:3306/xiaokui?useUnicode=true&characterEncoding=utf-8&serverTimezone=GMT%2B8&useSSL=true
     username: root
     password: 199710
     driver-class-name: com.mysql.cj.jdbc.Driver
